--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Frontend Developer</title>
 
   <head>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
     <!-- sweet2 -->
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.0/dist/sweetalert2.min.css" rel="stylesheet">
@@ -15,7 +16,7 @@
   <!-- tipografia  -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <!-- responsive -->
-   <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="stylesheet" href="./css/responsive.css">
 
   <link rel="stylesheet" href="./css/estilo.css" />
   <!-- Bootstrap Icons -->
@@ -38,9 +39,9 @@
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
-    
+
   </header>
-  
+
 
   <section class="hero">
     <div class="hero-content">
@@ -59,8 +60,8 @@
       </p>
       <a href="./img/developer javascrip 2024.pdf" download="Mauro-Pinto-CV.pdf">
         <button class="btn-download">Download CV</button>
-    </a>
-    
+      </a>
+
       <div class="social-icons">
         <a href="#"><i class="bi bi-linkedin"></i></a>
         <a href="#"><i class="bi bi-twitter"></i></a>
@@ -220,49 +221,49 @@
   <section id="contact-form" class="contact-form">
     <h2>Contacto</h2>
     <form id="form" method="POST">
-        <div class="input-group">
-            <label for="name">Nombre</label>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <div class="input-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="input-group">
-            <label for="message">Mensaje</label>
-            <textarea id="message" name="message" required></textarea>
-        </div>
-        <button type="submit">Enviar</button>
-    </form>
-</section>
-<script src="./js/formulario.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-<!-- Footer con íconos de redes sociales -->
-<footer class="footer">
-  <div class="container">
-      <div class="footer-content">
-          <p class="footer-text">Sígueme en mis  redes sociales</p>
-          <div class="social-icons">
-              <a href="https://facebook.com" target="_blank" class="social-icon">
-                  <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="https://twitter.com" target="_blank" class="social-icon">
-                  <i class="fab fa-twitter"></i>
-              </a>
-              <a href="https://linkedin.com" target="_blank" class="social-icon">
-                  <i class="fab fa-linkedin-in"></i>
-              </a>
-              <a href="https://instagram.com" target="_blank" class="social-icon">
-                  <i class="fab fa-instagram"></i>
-              </a>
-              <a href="https://github.com" target="_blank" class="social-icon">
-                  <i class="fab fa-github"></i>
-              </a>
-          </div>
+      <div class="input-group">
+        <label for="name">Nombre</label>
+        <input type="text" id="name" name="name" required>
       </div>
-  </div>
-</footer>
+      <div class="input-group">
+        <label for="email">Correo Electrónico</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="input-group">
+        <label for="message">Mensaje</label>
+        <textarea id="message" name="message" required></textarea>
+      </div>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+  <script src="./js/formulario.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <!-- Footer con íconos de redes sociales -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <p class="footer-text">Sígueme en mis redes sociales</p>
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank" class="social-icon">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://linkedin.com" target="_blank" class="social-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://github.com" target="_blank" class="social-icon">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 </body>
