--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- tipografia  -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <!-- responsive -->
-  <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="stylesheet" href="./css/">
 
   <link rel="stylesheet" href="./css/estilo.css" />
   <!-- Bootstrap Icons -->
