--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <div class="burger-line"></div>
       <div class="burger-line"></div>
       <div class="burger-line"></div>
+      <div class="burger-line"></div>
+      <div class="burger-line"></div>
     </div>
   </nav>
 
@@ -62,7 +64,8 @@
         pasión radica en crear experiencias interactivas que mejoren la vida
         de las personas.
       </p>
-      <a href="#" class="btn">Download CV</a>
+      <a href="./img/developer javascrip 2024.pdf" class="btn" download>Download CV</a>
+
 
       <!-- Social Media -->
       <div class="social-icons">
@@ -199,9 +202,9 @@
   </section>
 
   <!-- Botón de WhatsApp con ícono -->
-<a href="https://wa.me/xxxxxxxxxx" class="whatsapp-icon" target="_blank">
-  <i class="fab fa-whatsapp"></i>
-</a>
+  <a href="https://wa.me/xxxxxxxxxx" class="whatsapp-icon" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2024 Mauro Pinto. Todos los derechos reservados.</p>
