--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       </div>
     </div>
   </section>
+  
 
   <main>
     <section class="proyectos" id="proyectos">
@@ -186,7 +187,66 @@
       </div>
     </section>
 
-
+    <section id="proyectos-javascript" class="proyectos">
+      <h2>Proyectos Hechos Solo con JavaScript</h2>
+      <div class="proyectos-container">
+        <a href=" https://produccion2018.github.io/Lista-de-tarea-js/" class="proyecto-card">
+          <img src="./img/proyecto-js1.png" alt="Proyecto JS 1" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Lista de Tareas</h3>
+        </a>
+        <a href="https://produccion2018.github.io/Calculadora/" class="proyecto-card">
+          <img src="./img/proyecto-js2.png" alt="Proyecto JS 2" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Calculadora</h3>
+        </a>
+        <a href="https://produccion2018.github.io/Calculadora-Cient-fica/" class="proyecto-card">
+          <img src="./img/proyecto-js2.png" alt="Proyecto JS 3" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Calculadora Cientifica</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-js3.png" alt="Proyecto JS 4" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Juego de Memoria</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-js4.png" alt="Proyecto JS 5" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Generador de Contraseñas</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-js5.png" alt="Proyecto JS 6" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Conversor de Monedas</h3>
+        </a>
+      </div>
+    </section>
+    <section id="proyectos-react" class="proyectos">
+      <h2>Proyectos Hechos con React</h2>
+      <div class="proyectos-container">
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-react1.png" alt="Proyecto React 1" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Aplicación de Tareas</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-react2.png" alt="Proyecto React 2" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Clima React</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-react3.png" alt="Proyecto React 3" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Galería de Imágenes</h3>
+        </a>
+        <a href="#" class="proyecto-card">
+          <img src="./img/proyecto-react4.png" alt="Proyecto React 4" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Calculadora React</h3>
+        </a>
+      </div>
+    </section>
 
   </main>
 
