--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   </head>
 
 <body>
+  <!-- Botón de WhatsApp con ícono -->
+<a href="https://wa.me/xxxxxxxxxx" class="whatsapp-icon" target="_blank">
+  <i class="fab fa-whatsapp"></i>
+</a>
+
   <nav class="navbar">
     <div class="logo">
       <img src="./img/logo.png" alt="Logo">
@@ -205,12 +210,12 @@
           <i class="fab fa-github"></i>
           <h3>Calculadora Cientifica</h3>
         </a>
-        <a href="#" class="proyecto-card">
+        <a href="https://produccion2018.github.io/Juego-Memoria/" class="proyecto-card">
           <img src="./img/proyecto-js3.png" alt="Proyecto JS 4" class="proyecto-img">
           <i class="fab fa-github"></i>
           <h3>Juego de Memoria</h3>
         </a>
-        <a href="#" class="proyecto-card">
+        <a href="https://produccion2018.github.io/Generador-de-contrase-as/" class="proyecto-card">
           <img src="./img/proyecto-js4.png" alt="Proyecto JS 5" class="proyecto-img">
           <i class="fab fa-github"></i>
           <h3>Generador de Contraseñas</h3>
@@ -261,10 +266,7 @@
     </form>
   </section>
 
-  <!-- Botón de WhatsApp con ícono -->
-  <a href="https://wa.me/xxxxxxxxxx" class="whatsapp-icon" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2024 Mauro Pinto. Todos los derechos reservados.</p>
