--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
           <i class="fab fa-github"></i>
           <h3>Apis Conversor de Monedas</h3>
         </a>
-        <a href=" https://produccion2018.github.io/Conversor-de-moneda/" class="proyecto-card">
-          <img src="" alt="Proyecto JS 6" class="proyecto-img">
+        <a href=" " class="proyecto-card">
+          <img src="./img/javascrip final.jpeg" alt="Proyecto JS 6" class="proyecto-img">
           <i class="fab fa-github"></i>
           <h3>Turnos médicos usando localstorage</h3>
         </a>
