--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <i class="fab fa-github"></i>
           <h3>Apis Conversor de Monedas</h3>
         </a>
-        <a href=" " class="proyecto-card">
+        <a href=" https://produccion2018.github.io/turnos-m-dicos/ " class="proyecto-card">
           <img src="./img/javascrip final.jpeg" alt="Proyecto JS 6" class="proyecto-img">
           <i class="fab fa-github"></i>
           <h3>Turnos médicos usando localstorage</h3>
