--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
           <i class="fab fa-github"></i>
           <h3>Turnos médicos usando localstorage</h3>
         </a>
+
+        <a href="https://produccion2018.github.io/Generador-de-Clima/ " class="proyecto-card">
+          <img src="./img/readme/javscript 08.webp" alt="Proyecto JS 6" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>Generador de Clima con Aplis</h3>
+        </a>
       </div>
     </section>
     
