--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
           <i class="fab fa-github"></i>
           <h3>Generador de Clima con Aplis</h3>
         </a>
+        <a href="https://produccion2018.github.io/cambio-d-lar-blue/ " class="proyecto-card">
+          <img src="./img/Moneda Cmabio Blue.webp" alt="Proyecto JS 6" class="proyecto-img">
+          <i class="fab fa-github"></i>
+          <h3>cambio de Modenas dolar Blue con Aplis</h3>
+        </a>
       </div>
     </section>
     
