--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         pasión radica en crear experiencias interactivas que mejoren la vida
         de las personas.
       </p>
-      <a href="./img/developer javascrip 2024.pdf" class="btn" download>Download CV</a>
+      <a href="./img/readme/Cv Js developer Maur Alexander Pinto.pdf" class="btn" download>Download CV</a>
 
 
       <!-- Social Media -->
